# SDL_learn

./: CMakeLists.txt
test/: event.c  hello.c  loadBlit.c
